janken.css
html {
	min-width: 960px;
}

body {
	background-image: url("background.png");
	background-position: center;
	background-repeat: no-repeat;
	background-color: black;
	background-attachment: scroll;
	width: 960px;
	height: 720px;
	margin-left: auto;
	margin-right: auto;
}

.hand {
	position: absolute;
	width: 110px;
	height: 110px;
	background-repeat: no-repeat;
	backgroud-postion-y: center;
	top: 300px;
	left: 0px;
}

.hand.enemy {
	-webkit-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -moz-transform: scaleX(-1);
    transform: scaleX(-1);
    left: 850px;
}

#score_div {
	color: white;
	font-family: sans-serif;
	position: absolute;
	top: 30px;
	font-size: large;
}
#score {
	font-size: xx-large;
}

.gain {
	font-size: 60px;
	position: absolute;
	bottom: 75px;
}

#title {
	color: ghostwhite;
	font-family: 'Concert One', cursive;
	text-shadow: 1px 1px 3px red;
	width: 100%;
	background-color: black;
	text-align: center;
	position: relative;
	top: 240px;
	cursor: pointer;
	box-shadow: 0px 0px 10px 10px black;
	overflow: hidden;
	white-space: nowrap;
}

#janken_shooting {
	font-size: 60px;
	margin-top: 20px;
	margin-bottom: 50px;
}

#click_to_start {
	font-size: 30px;
	margin-bottom: 20px;
}

#help {
	cursor: pointer;
	color: white;
	position: absolute;
	right: 50px;
	font-size: 40px;
	width: 50px;
	height: 50px;
}
#help:hover {
	color: gray;
}
#dialog {
	font-size: small;
}
#key_change {
	margin-left: 65%;
}
#mute {
	cursor: pointer;
	color: white;
	position: absolute;
	right: 150px;
	font-size: 35px;
	width: 50px;
	height: 50px;
}
#mute:hover {
	color: gray;
}

